--- a/sass/catpuccin_index.scss
+++ b/sass/catpuccin_index.scss
@@ -12,6 +12,15 @@
     }
 }
 
+.home-content .posts-header {
+    font-size: 2.5rem;
+}
+
+.home-content .social-icon {
+    height: 2rem;
+    width: 2rem;
+}
+
 .bio {
     font-size: 1.2rem;
     line-height: 1.8rem;
